--- a/pages/lyricfetch.html
+++ b/pages/lyricfetch.html
@@ -14,15 +14,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Jordan Butterwick</title>
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <title>Lyric Fetcher</title>
   </head>
   <body>
     <header>
       <nav>
         <div class="nav-background">
           <ul class="nav-bar">
-            <li><a href="./index.html" class="link">Home</a></li>
+            <li><a href="../index.html" class="link">Home</a></li>
             <li>
               <a href="https://github.com/Jordanwbutterwick" class="link"
                 >My Github</a
@@ -33,7 +33,7 @@
                 My Projects <i class="fas fa-angle-down"></i>
               </button>
               <div id="myDropdown" class="dropdown-content">
-                <a href="./pages/lyricfetch.html">Lyric Fetcher</a>
+                <a href="#" class="active">Lyric Fetcher</a>
                 <a href="#">Other Project 1</a>
                 <a href="#">Other Project 2</a>
               </div>
@@ -43,18 +43,26 @@
       </nav>
     </header>
     <main>
-      <div class="hero">
-        <div class="hero-background">
+      <div class="hero-2" id="hero-2">
+        <div class="hero-background-2">
           <div class="content">
-            <h1>Jordan Butterwick</h1>
-            <h2>email: <strong>jordanwbutterwick@gmail.com</strong></h3>
-            <h2>
-                <a href="https://www.linkedin.com/in/jordanwb/" class="link">linkedin</a>
-            </h3>
+            <h1>Lyric finder</h1>
+            <form action="GET">
+              <label for="artist"
+                >Artist name here:
+                <input type="text" name="artist" id="artist"/></label
+              ><br /><label for="song"
+                >Songs Title here:
+                <input type="text" name="song" id="song"/></label
+              ><br /><br />
+              <input type="submit" value="submit" name="submit" id="submit" />
+            </form>
           </div>
         </div>
       </div>
-      <div class="future-project-box"></div>
+      <div class="content">
+        <div id="results"></div>
+      </div>
     </main>
     <footer>
       <div class="footer">
@@ -87,6 +95,6 @@
         </ul>
       </div>
     </footer>
-    <script src="./scripts/scripts.js"></script>
+    <script src="../scripts/scripts.js"></script>
   </body>
 </html>
