--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <div class="hero-background">
           <div class="content">
             <h1>Jordan Butterwick</h1>
-            <h2>email: <strong>jordanwbutterwick@gmail.com</strong></h3>
-              <h1>Hi wassup Matthew</h1>
+            <h2>email: jordanwbutterwick@gmail.com</h3>
             <h2>
                 <a href="https://www.linkedin.com/in/jordanwb/" class="link">linkedin</a>
             </h3>
