--- a/pages/lyricfetch.html
+++ b/pages/lyricfetch.html
@@ -47,6 +47,14 @@
         <div class="hero-background-2">
           <div class="content">
             <h1>Lyric finder</h1>
+            <p>
+              Find the lyrics to a song using lyrics.ovh API. You can find the
+              API documentation
+              <a href="https://lyricsovh.docs.apiary.io/#" class="plink"
+                >right here</a
+              >
+              if you'd like to use it for yourself
+            </p>
             <form action="GET">
               <label for="artist"
                 >Artist name here:
