--- a/pages/lyricfetch.html
+++ b/pages/lyricfetch.html
@@ -24,6 +24,9 @@
           <ul class="nav-bar">
             <li><a href="../index.html" class="link">Home</a></li>
             <li>
+              <a href="https://donate.jordanwb.design" class="link">Donate</a>
+            </li>
+            <li>
               <a href="https://github.com/Jordanwbutterwick" class="link"
                 >My Github</a
               >
