--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </button>
               <div id="myDropdown" class="dropdown-content">
                 <a href="./pages/lyricfetch.html">Lyric Fetcher</a>
-                <a href="#">Other Project 1</a>
+                <a href="https://stylepickr.jordanwb.design">Stylepickr</a>
                 <a href="#">Other Project 2</a>
               </div>
             </li>
