--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Cormorant:300,300i|Montserrat:300,500" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous" />
   <meta charset="UTF-8" />
@@ -26,9 +26,10 @@
               My Projects <i class="fas fa-angle-down"></i>
             </button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="./pages/lyricfetch.html">Lyric Fetcher</a>
+              <a href="./pages/lyricfetch.html">Lyric Finder</a>
               <a href="https://stylepickr.jordanwb.design">Stylepickr</a>
-              <a href="#">Other Project 2</a>
+              <a href="https://bugs.jordanwb.design">Cool Bugs</a>
+              <a href="https://plants.jordanwb.design">Cool Plants</a>
             </div>
           </li>
         </ul>
@@ -40,10 +41,7 @@
       <div class="hero-background">
         <div class="content">
           <h1>Jordan Butterwick</h1>
-          <h2>email: jordanwbutterwick@gmail.com
-          </h2>
-          <a href="https://www.linkedin.com/in/jordanwb/" class="link">linkedin</a>
-          </h3>
+          <h2>email: jordanwbutterwick@gmail.com</h2>
         </div>
       </div>
     </div>
