--- a/pages/lyricfetch.html
+++ b/pages/lyricfetch.html
@@ -1,111 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Cormorant:300,300i|Montserrat:300,500"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../styles/styles.css" />
-    <title>Lyric Fetcher</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="nav-background">
-          <ul class="nav-bar">
-            <li><a href="../index.html" class="link">Home</a></li>
-            <li>
-              <a href="https://donate.jordanwb.design" class="link">Donate</a>
-            </li>
-            <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link"
-                >My Github</a
-              >
-            </li>
-            <li>
-              <button onclick="myFunction()" class="dropbtn">
-                My Projects <i class="fas fa-angle-down"></i>
-              </button>
-              <div id="myDropdown" class="dropdown-content">
-                <a href="#" class="active">Lyric Fetcher</a>
-                <a href="#">Other Project 1</a>
-                <a href="#">Other Project 2</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="hero-2" id="hero-2">
-        <div class="hero-background-2">
-          <div class="content">
-            <h1>Lyric finder</h1>
-            <p>
-              Find the lyrics to a song using lyrics.ovh API. You can find the
-              API documentation
-              <a href="https://lyricsovh.docs.apiary.io/#" class="plink"
-                >right here</a
-              >
-              if you'd like to use it for yourself
-            </p>
-            <form action="GET">
-              <label for="artist"
-                >Artist name here:
-                <input type="text" name="artist" id="artist"/></label
-              ><br /><label for="song"
-                >Songs Title here:
-                <input type="text" name="song" id="song"/></label
-              ><br /><br />
-              <input type="submit" value="submit" name="submit" id="submit" />
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="content">
-        <div id="results"></div>
-      </div>
-    </main>
-    <footer>
-      <div class="footer">
-        <ul class="footer-links">
+
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Cormorant:300,300i|Montserrat:300,500" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="../styles/styles.css" />
+  <title>Lyric Fetcher</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="nav-background">
+        <ul class="nav-bar">
+          <li><a href="../index.html" class="link">Home</a></li>
           <li>
-            <a href="https://github.com/Jordanwbutterwick">
-              <i class="fab fa-github fa-3x icon"></i
-            ></a>
+            <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/jordan.butterwick">
-              <i class="fab fa-facebook-f fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/jwbutterwick">
-              <i class="fab fa-twitter fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/jordan.w.b/">
-              <i class="fab fa-instagram fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/jordanwb/">
-              <i class="fab fa-linkedin-in fa-3x icon"></i>
-            </a>
+            <button onclick="myFunction()" class="dropbtn">
+              My Projects <i class="fas fa-angle-down"></i>
+            </button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="#" class="active">Lyric Fetcher</a>
+              <a href="#">Other Project 1</a>
+              <a href="#">Other Project 2</a>
+            </div>
           </li>
         </ul>
       </div>
-    </footer>
-    <script src="../scripts/scripts.js"></script>
-  </body>
+    </nav>
+  </header>
+  <main>
+    <div class="hero-2" id="hero-2">
+      <div class="hero-background-2">
+        <div class="content">
+          <h1>Lyric finder</h1>
+          <p>
+            Find the lyrics to a song using lyrics.ovh API. You can find the
+            API documentation
+            <a href="https://lyricsovh.docs.apiary.io/#" class="plink">right here</a>
+            if you'd like to use it for yourself
+          </p>
+          <form action="GET">
+            <label for="artist">Artist name here:
+              <input type="text" name="artist" id="artist" /></label><br /><label for="song">Songs Title here:
+              <input type="text" name="song" id="song" /></label><br /><br />
+            <input type="submit" value="submit" name="submit" id="submit" />
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div id="results"></div>
+    </div>
+  </main>
+  <footer>
+    <div class="footer">
+      <ul class="footer-links">
+        <li>
+          <a href="https://github.com/Jordanwbutterwick">
+            <i class="fab fa-github fa-3x icon"></i></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/jordan.butterwick">
+            <i class="fab fa-facebook-f fa-3x icon"></i></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/jwbutterwick">
+            <i class="fab fa-twitter fa-3x icon"></i></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/jordan.w.b/">
+            <i class="fab fa-instagram fa-3x icon"></i></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/jordanwb/">
+            <i class="fab fa-linkedin-in fa-3x icon"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <script src="../scripts/scripts.js"></script>
+</body>
+
 </html>
