--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
               <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
+              <a href="./assets/Jordan Butterwick 2019.pdf" class="link">My Resume</a>
+            </li>
+            <li>
               <button onclick="myFunction()" class="dropbtn">
                 My Projects <i class="fas fa-angle-down"></i>
               </button>
