--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Author: Jordan Butterwick -->
+  <!-- Title: Portfolio -->
+  <!-- Date Last Updated: March 11, 2019 -->
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
     <link
