--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
-              <a href="./assets/Jordan Butterwick 2019.pdf" class="link">My Resume</a>
+              <a href="./assets/Jordan Butterwick 2019.pdf" class="link">My Résumé</a>
             </li>
             <li>
               <button onclick="myFunction()" class="dropbtn">
@@ -47,7 +47,10 @@
         <div class="hero-background">
           <div class="content">
             <h1>Jordan Butterwick</h1>
-            <h2>email: jordanwbutterwick@gmail.com</h2>
+            <h2>Web Designer & Developer for hire</h2>
+            <p>
+              I'm currently looking for work. My résumé is in the nav bar if you're interested.
+            </p>
           </div>
         </div>
       </div>
