--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
-              <a href="./assets/Jordan Butterwick 2019.pdf" class="link">My Résumé</a>
+              <a href="./assets/JButterwick2019.pdf" class="link">My Résumé</a>
             </li>
             <li>
               <button onclick="myFunction()" class="dropbtn">
