pricing page created

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Author: Jordan Butterwick -->
-  <!-- Title: Portfolio -->
+  <!-- Title: Portfolio Pricing Page-->
   <!-- Date Last Updated: March 11, 2019 -->
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
@@ -14,7 +14,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <title>Jordan Butterwick</title>
   </head>
 
@@ -24,13 +24,13 @@
         <div class="nav-background">
           <ul class="nav-bar">
             <li>
+              <a href="../index.html" class="link">Home Page</a>
+            </li>
+            <li>
               <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
               <a href="./assets/JButterwick2019.pdf" class="link">My Résumé</a>
-            </li>
-            <li>
-              <a href="./pages/pricing.html" class="link">Pricing</a>
             </li>
             <li>
               <button onclick="myFunction()" class="dropbtn">
@@ -49,11 +49,22 @@
       <div class="hero">
         <div class="hero-background">
           <div class="content">
-            <h1>Jordan Butterwick</h1>
-            <h2>Web Designer & Developer for hire</h2>
+            <h1>Pricing Details</h1>
+            <h2>I base my pricing on the complexity and depth of the project.</h2>
             <p>
-              I'm currently looking for work. My résumé is in the nav bar if you're interested.
+              If you're looking for a quote or estimate, contact me with some details at
+              jordanwbutterwick@gmail.com. I offer both web design and development services and can
+              help with a plethora of web problems. If you have a question, don't hesitate to ask.
             </p>
+            <div class="price-list">
+              <ul>
+                <li>- Web asset design: $80/hr</li>
+                <li>- Basic static webpage development: $80/hr</li>
+                <li>- Dynamic website development: $100/hr</li>
+                <li>- Full asset design and static web page development: $120/hr</li>
+                <li>- Full asset design and dynamic site development: $140/hr</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
