Made some fixes

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -4,7 +4,10 @@
   <!-- Title: Portfolio Pricing Page-->
   <!-- Date Last Updated: March 11, 2019 -->
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora|Open+Sans"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -24,20 +27,22 @@
         <div class="nav-background">
           <ul class="nav-bar">
             <li>
-              <a href="../index.html" class="link">Home Page</a>
+              <a href="../index.html" class="link">Home</a>
             </li>
             <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
+              <a href="https://github.com/Jordanwbutterwick" class="link"
+                >My Github</a
+              >
             </li>
             <li>
-              <a href="./assets/JButterwick2019.pdf" class="link">My Résumé</a>
+              <a href="../assets/JButterwick2019.pdf" class="link">My Résumé</a>
             </li>
             <li>
               <button onclick="myFunction()" class="dropbtn">
                 My Projects <i class="fas fa-angle-down"></i>
               </button>
               <div id="myDropdown" class="dropdown-content">
-                <a href="./pages/lyricfetch.html">Lyric Finder</a>
+                <a href="./lyricfetch.html">Lyric Finder</a>
                 <a href="https://stylepickr.jordanwb.design">Stylepickr</a>
               </div>
             </li>
@@ -46,29 +51,38 @@
       </nav>
     </header>
     <main>
-      <div class="hero">
-        <div class="hero-background">
+      <div class="pricing-hero">
+        <div class="pricing-hero-background">
           <div class="content">
             <h1>Pricing Details</h1>
-            <h2>I base my pricing on the complexity and depth of the project.</h2>
+            <h2>
+              I base my pricing on the complexity and depth of the project.
+            </h2>
             <p>
-              If you're looking for a quote or estimate, contact me with some details at
-              jordanwbutterwick@gmail.com. I offer both web design and development services and can
-              help with a plethora of web problems. If you have a question, don't hesitate to ask.
+              If you're looking for a quote or estimate, contact me with some
+              details at jordanwbutterwick@gmail.com. I offer both web design
+              and development services and can help with a plethora of web
+              problems. If you have a question, don't hesitate to ask.
             </p>
-            <div class="price-list">
-              <ul>
-                <li>- Web asset design: $80/hr</li>
-                <li>- Basic static webpage development: $80/hr</li>
-                <li>- Dynamic website development: $100/hr</li>
-                <li>- Full asset design and static web page development: $120/hr</li>
-                <li>- Full asset design and dynamic site development: $140/hr</li>
-              </ul>
-            </div>
           </div>
         </div>
       </div>
-      <div class="future-project-box"></div>
+      <div class="pricing">
+        <div class="price-list">
+          <ul>
+            <li><h3>Here are some example prices</h3></li>
+            <li>- Web asset design: $80/hr</li>
+            <li>- Basic static webpage development: $80/hr</li>
+            <li>- Dynamic website development: $100/hr</li>
+            <li>
+              - Full web asset design and static web page development: $120/hr
+            </li>
+            <li>
+              - Full web asset design and dynamic site development: $140/hr
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
@@ -101,6 +115,6 @@
         </ul>
       </div>
     </footer>
-    <script src="./scripts/scripts.js"></script>
+    <script src="../scripts/scripts.js"></script>
   </body>
 </html>
