removed some social media links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <!-- Title: Portfolio -->
   <!-- Date Last Updated: March 11, 2019 -->
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora|Open+Sans"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -24,7 +27,9 @@
         <div class="nav-background">
           <ul class="nav-bar">
             <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
+              <a href="https://github.com/Jordanwbutterwick" class="link"
+                >My Github</a
+              >
             </li>
             <li>
               <a href="./assets/JButterwick2019.pdf" class="link">My Résumé</a>
@@ -52,7 +57,8 @@
             <h1>Jordan Butterwick</h1>
             <h2>Web Designer & Developer for hire</h2>
             <p>
-              I'm currently looking for work. My résumé is in the nav bar if you're interested.
+              I'm currently looking for work. My résumé is in the nav bar if
+              you're interested.
             </p>
           </div>
         </div>
@@ -65,21 +71,6 @@
           <li>
             <a href="https://github.com/Jordanwbutterwick">
               <i class="fab fa-github fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/jordan.butterwick">
-              <i class="fab fa-facebook-f fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/jwbutterwick">
-              <i class="fab fa-twitter fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/jordan.w.b/">
-              <i class="fab fa-instagram fa-3x icon"></i
             ></a>
           </li>
           <li>
