--- a/pages/lyricfetch.html
+++ b/pages/lyricfetch.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora|Open+Sans"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -24,10 +27,14 @@
               <a href="../index.html" class="link">Home</a>
             </li>
             <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
+              <a href="https://github.com/Jordanwbutterwick" class="link"
+                >My Github</a
+              >
             </li>
             <li>
-              <a href="./assets/Jordan Butterwick 2019.pdf" class="link">My Resume</a>
+              <a href="./assets/Jordan Butterwick 2019.pdf" class="link"
+                >My Resume</a
+              >
             </li>
             <li>
               <button onclick="myFunction()" class="dropbtn">
@@ -47,15 +54,20 @@
           <div class="content">
             <h1>Lyric finder</h1>
             <p>
-              Find the lyrics to a song using lyrics.ovh API. You can find the API documentation
-              <a href="https://lyricsovh.docs.apiary.io/#" class="plink">right here</a>
+              Find the lyrics to a song using lyrics.ovh API. You can find the
+              API documentation
+              <a href="https://lyricsovh.docs.apiary.io/#" class="plink"
+                >right here</a
+              >
               if you'd like to use it for yourself
             </p>
             <form action="GET">
               <label for="artist"
-                >Artist name here: <input type="text" name="artist" id="artist"/></label
+                >Artist name here:
+                <input type="text" name="artist" id="artist"/></label
               ><br /><label for="song"
-                >Songs Title here: <input type="text" name="song" id="song"/></label
+                >Songs Title here:
+                <input type="text" name="song" id="song"/></label
               ><br /><br />
               <input type="submit" value="submit" name="submit" id="submit" />
             </form>
@@ -72,21 +84,6 @@
           <li>
             <a href="https://github.com/Jordanwbutterwick">
               <i class="fab fa-github fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/jordan.butterwick">
-              <i class="fab fa-facebook-f fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/jwbutterwick">
-              <i class="fab fa-twitter fa-3x icon"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/jordan.w.b/">
-              <i class="fab fa-instagram fa-3x icon"></i
             ></a>
           </li>
           <li>
