changed selection styles

--- a/pages/lyricfetch.html
+++ b/pages/lyricfetch.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Lora|Open+Sans"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -15,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../styles/styles.css" />
-    <title>Lyric Fetcher</title>
+    <title>Jordan Butterwick | Lyric Fetcher</title>
   </head>
 
   <body>
@@ -27,14 +24,10 @@
               <a href="../index.html" class="link">Home</a>
             </li>
             <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link"
-                >My Github</a
-              >
+              <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
-              <a href="./assets/Jordan Butterwick 2019.pdf" class="link"
-                >My Resume</a
-              >
+              <a href="./assets/Jordan Butterwick 2019.pdf" class="link">My Resume</a>
             </li>
             <li>
               <button onclick="myFunction()" class="dropbtn">
@@ -54,20 +47,15 @@
           <div class="content">
             <h1>Lyric finder</h1>
             <p>
-              Find the lyrics to a song using lyrics.ovh API. You can find the
-              API documentation
-              <a href="https://lyricsovh.docs.apiary.io/#" class="plink"
-                >right here</a
-              >
+              Find the lyrics to a song using lyrics.ovh API. You can find the API documentation
+              <a href="https://lyricsovh.docs.apiary.io/#" class="plink">right here</a>
               if you'd like to use it for yourself
             </p>
             <form action="GET">
               <label for="artist"
-                >Artist name here:
-                <input type="text" name="artist" id="artist"/></label
+                >Artist name here: <input type="text" name="artist" id="artist"/></label
               ><br /><label for="song"
-                >Songs Title here:
-                <input type="text" name="song" id="song"/></label
+                >Songs Title here: <input type="text" name="song" id="song"/></label
               ><br /><br />
               <input type="submit" value="submit" name="submit" id="submit" />
             </form>
