--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <!-- Title: Portfolio -->
   <!-- Date Last Updated: March 11, 2019 -->
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Lora|Open+Sans"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -18,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Jordan Butterwick</title>
+    <title>Jordan Butterwick | Home</title>
   </head>
 
   <body>
@@ -27,9 +24,7 @@
         <div class="nav-background">
           <ul class="nav-bar">
             <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link"
-                >My Github</a
-              >
+              <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
               <a href="./assets/JButterwick2019.pdf" class="link">My Résumé</a>
@@ -57,8 +52,7 @@
             <h1>Jordan Butterwick</h1>
             <h2>Web Designer & Developer for hire</h2>
             <p>
-              I'm currently looking for work. My résumé is in the nav bar if
-              you're interested.
+              I'm currently looking for work. My résumé is in the nav bar if you're interested.
             </p>
           </div>
         </div>
