--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -4,10 +4,7 @@
   <!-- Title: Portfolio Pricing Page-->
   <!-- Date Last Updated: March 11, 2019 -->
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Lora|Open+Sans"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -18,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../styles/styles.css" />
-    <title>Jordan Butterwick</title>
+    <title>Jordan Butterwick | Pricing</title>
   </head>
 
   <body>
@@ -30,9 +27,7 @@
               <a href="../index.html" class="link">Home</a>
             </li>
             <li>
-              <a href="https://github.com/Jordanwbutterwick" class="link"
-                >My Github</a
-              >
+              <a href="https://github.com/Jordanwbutterwick" class="link">My Github</a>
             </li>
             <li>
               <a href="../assets/JButterwick2019.pdf" class="link">My Résumé</a>
@@ -59,10 +54,9 @@
               I base my pricing on the complexity and depth of the project.
             </h2>
             <p>
-              If you're looking for a quote or estimate, contact me with some
-              details at jordanwbutterwick@gmail.com. I offer both web design
-              and development services and can help with a plethora of web
-              problems. If you have a question, don't hesitate to ask.
+              If you're looking for a quote or estimate, contact me with some details at
+              jordanwbutterwick@gmail.com. I offer both web design and development services and can
+              help with a plethora of web problems. If you have a question, don't hesitate to ask.
             </p>
           </div>
         </div>
